# httptosocks

./: Cargo.toml  README.md
c/: httptosocks.h
src/: common.rs  lib.rs
