[package]
name = "httptosocks"
version = "0.1.0"
authors = ["xutianyi <853122726@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-socks2 = "0.6"
async-socks5 = "0.5"
log = "0.4"
log4rs = "1"